Simplify internal administration and retire ticket tags
